// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GatewayList > snapshot: cpi-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Show deleted",
    "Refresh",
    "+ Register Gateway",
    "All43",
    "Production33",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [
    {
      "href": "/gateway",
      "text": "Overview",
    },
    {
      "href": "/gateways",
      "text": "Registry",
    },
    {
      "href": "/drift",
      "text": "Config Sync",
    },
    {
      "href": "https://wm-runtime.gostoa.dev",
      "text": "Runtime",
    },
    {
      "href": "https://wm-ui.gostoa.dev",
      "text": "Third-party UI",
    },
    {
      "href": "https://vps-wm.gostoa.dev",
      "text": "Target",
    },
  ],
}
`;

exports[`GatewayList > snapshot: devops persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All43",
    "Production33",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [
    {
      "href": "/gateway",
      "text": "Overview",
    },
    {
      "href": "/gateways",
      "text": "Registry",
    },
    {
      "href": "/drift",
      "text": "Config Sync",
    },
    {
      "href": "https://wm-runtime.gostoa.dev",
      "text": "Runtime",
    },
    {
      "href": "https://wm-ui.gostoa.dev",
      "text": "Third-party UI",
    },
    {
      "href": "https://vps-wm.gostoa.dev",
      "text": "Target",
    },
  ],
}
`;

exports[`GatewayList > snapshot: tenant-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All43",
    "Production33",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [
    {
      "href": "/gateway",
      "text": "Overview",
    },
    {
      "href": "/gateways",
      "text": "Registry",
    },
    {
      "href": "/drift",
      "text": "Config Sync",
    },
    {
      "href": "https://wm-runtime.gostoa.dev",
      "text": "Runtime",
    },
    {
      "href": "https://wm-ui.gostoa.dev",
      "text": "Third-party UI",
    },
    {
      "href": "https://vps-wm.gostoa.dev",
      "text": "Target",
    },
  ],
}
`;

exports[`GatewayList > snapshot: viewer persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All43",
    "Production33",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [
    {
      "href": "/gateway",
      "text": "Overview",
    },
    {
      "href": "/gateways",
      "text": "Registry",
    },
    {
      "href": "/drift",
      "text": "Config Sync",
    },
    {
      "href": "https://wm-runtime.gostoa.dev",
      "text": "Runtime",
    },
    {
      "href": "https://wm-ui.gostoa.dev",
      "text": "Third-party UI",
    },
    {
      "href": "https://vps-wm.gostoa.dev",
      "text": "Target",
    },
  ],
}
`;
